# openmucf

./: .gitattributes  .gitignore  .zenodo-data.json  .zenodo.json  ADOPTERS.md  BENCHMARKS.md  CALIBRATION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CREDIBILITY_FIREWALL.md  DESIGN.md  DESIGN_MANIFEST.json  FINDINGS.md  FINDINGS_MANIFEST.json  FORECASTS.md  FRONTIER.md  FRONTIER_MANIFEST.json  LITERATURE.md  MATERIALITY.md  MATERIALITY_MANIFEST.json  MODEL_SPEC.md  MUON_COST.md  MUON_COST_MANIFEST.json  Makefile  NEUTRONOMICS.md  NEUTRONOMICS_MANIFEST.json  PRE_REGISTRATION.md  README.md  SYSTEMS.md  SYSTEMS_MANIFEST.json  TWIN_AUDIT.md  TWIN_MANIFEST.json  VALIDATION.md  VALIDATION_CHANNELS.md  codemeta.json  datapackage.json  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
docs/: accounting.md  api-overview.md  getting-started.md  index.md  step0_collisiondb.md  xray_feasibility.md
examples/: quickstart.py
forecasts/: FC-001-mufuse.json  FORECAST_PROTOCOL.md  forecast.schema.json
notebooks/: parisi_ac225.ipynb  quickstart.ipynb
openmucf/: __init__.py  analytic.py  bench.py  calibrate.py  cli.py  constants.py  cycle.py  design.py  energy.py  exact.py  forecast.py  formation.py  frontier.py  interop.py  likelihood.py  mucost.py  provenance.py  rates.py  systems.py  twin.py  uq.py  validate.py
openmucf/data/: bib_unresolved.txt  muon_cost.csv  muon_cost.schema.json  rates.csv  rates.schema.json  references.bib  uq_priors.csv  validation_targets.csv  yamashita_kino_lc_T.csv
openmucf/data/benchmarks/: jones-1986.json  kou-chen-2026.json
paper/: paper.bib  paper.md
scripts/: digitize_yamashita_fig3a.py  generate_calibration.py  generate_design.py  generate_findings.py  generate_forecast.py  generate_frontier.py  generate_materiality.py  generate_mucost.py  generate_neutronomics.py  generate_systems.py  generate_twin_audit.py  parisi_ac225.py  xray_feasibility.py
tests/: cycle_v1_reference.json  test_analytic.py  test_bench.py  test_calibrate.py  test_calibrate_sbc.py  test_calibration_audit.py  test_cli.py  test_constants.py  test_cycle.py  test_cycle_channels.py  test_datapackage.py  test_design.py  test_design_audit.py  test_digitizer.py  test_energy.py  test_exact.py  test_forecast.py  test_formation.py  test_frontier.py  test_interop.py  test_materiality.py  test_mucost.py  test_neutronomics.py  test_packaging.py  test_parisi.py  test_provenance.py  test_rates.py  test_systems.py  test_twin.py  test_twin_coverage.py  test_uq.py  test_uq_priors.py  test_validate.py
