[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openmucf"
version = "1.1.0"
description = "Open FAIR rate ledger + differentiable muon-catalyzed-fusion cycle/energy auditor"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Bryan Nasr", email = "bryannasr4@gmail.com" }]
keywords = ["muon-catalyzed-fusion", "fusion", "kinetics", "uncertainty-quantification", "jax"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4",
    "diffrax>=0.5",
    "optimistix>=0.1",  # WS-Q frontier.py: Newton root-find for the inverse-design solver (also transitive via diffrax)
    "numpyro>=0.13",
    "SALib>=1.4",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
openmucf = "openmucf.cli:main"

[project.urls]
DOI = "https://doi.org/10.5281/zenodo.21251511"  # version-independent concept DOI
Homepage = "https://github.com/bryannasr4-gif/openmucf"
Repository = "https://github.com/bryannasr4-gif/openmucf"
Documentation = "https://github.com/bryannasr4-gif/openmucf/tree/main/docs"
Changelog = "https://github.com/bryannasr4-gif/openmucf/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["openmucf"]

[tool.setuptools.package-data]
openmucf = ["data/*", "data/benchmarks/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (the twin interval-calibration coverage run); deselected by default, run explicitly with `pytest -m slow`",
]
# Default collection deselects `slow` (kept out of the fast suite + CI); a command-line `-m slow` overrides this.
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E741"]  # single-letter names (E, R, F, T, ...) are standard physics notation here

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501"]  # report generators embed long markdown lines in f-strings

